--- a/src/main/resources/templates/goods_list.html
+++ b/src/main/resources/templates/goods_list.html
@@ -6,5 +6,6 @@
 </head>
 <body>
 <p th:text="'hello:'+${user.nickname}" ></p>
+<a href="https://www.baidu.com/" target="_blank">百度</a>
 </body>
 </html>
