--- a/src/main/resources/templates/goods_list.html
+++ b/src/main/resources/templates/goods_list.html
@@ -20,7 +20,7 @@
     <script type="text/javascript" th:src="@{/js/common.js}"></script>
 </head>
 <body>
-<p th:text="'hello:'+${user.nickname}" ></p>
+<!--<p th:text="'hello:'+${user.nickname}" ></p>-->
 <hr />
 <div class="panel panel-default">
     <div class="panel-heading">秒杀商品列表</div>
