--- a/src/main/resources/templates/goods_list.html
+++ b/src/main/resources/templates/goods_list.html
@@ -32,7 +32,8 @@
             <td th:text="${goods.goodsPrice}"></td>
             <td th:text="${goods.miaoshaPrice}"></td>
             <td th:text="${goods.stockCount}"></td>
-            <td><a th:href="'to_detail/'+${goods.id}">详情</a></td>
+            <!--<td><a th:href="'to_detail/'+${goods.id}">详情</a></td>-->
+            <td><a th:href="'/seckill/goods_detail.htm?goodsId='+${goods.id}">详情</a></td>
         </tr>
     </table>
 </div>
